--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,12 +89,6 @@ set(SPIRV_CROSS_ENABLE_REFLECT OFF CACHE BOOL "")
 set(SPIRV_CROSS_ENABLE_C_API OFF CACHE BOOL "")
 set(SPIRV_CROSS_ENABLE_UTIL OFF CACHE BOOL "")
 set(SPIRV_CROSS_SKIP_INSTALL ON CACHE BOOL "")
-if(NOT GRAPHICS_API STREQUAL "Metal")
-    set(SPIRV_CROSS_ENABLE_MSL OFF CACHE BOOL "")
-endif()
-if(NOT GRAPHICS_API STREQUAL "D3D11" AND NOT GRAPHICS_API STREQUAL "D3D12")
-    set(SPIRV_CROSS_ENABLE_HLSL OFF CACHE BOOL "")
-endif()
 
 ## GLSlang
 set(BUILD_EXTERNAL OFF CACHE BOOL "")
@@ -106,6 +100,14 @@ set(ENABLE_CTEST OFF CACHE BOOL "")
 set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
 set(ENABLE_GLSLANG_WEBMIN ON CACHE BOOL "")
 set(ENABLE_GLSLANG_WEBMIN_DEVEL OFF CACHE BOOL "")
+
+## bgfx
+set(BGFX_BUILD_TOOLS OFF CACHE BOOL "")
+set(BGFX_BUILD_EXAMPLES OFF CACHE BOOL "")
+set(BGFX_INSTALL OFF CACHE BOOL "")
+set(BGFX_CUSTOM_TARGETS OFF CACHE BOOL "")
+set(BGFX_USE_DEBUG_SUFFIX OFF CACHE BOOL "")
+set(BGFX_OPENGL_USE_EGL ON CACHE BOOL "")
 
 # --------------------------------------------------
 
@@ -152,7 +154,7 @@ endif()
 
 if(BABYLON_NATIVE_PLUGIN_NATIVEENGINE)
     set(CONTENT_TO_FETCH ${CONTENT_TO_FETCH} bgfx)
-endif
+endif()
 
 # Setting Graphics API
 if(APPLE)
@@ -173,6 +175,13 @@ elseif(WIN32)
             message(FATAL_ERROR "Unrecognized/Unsupported render API: ${GRAPHICS_API}")
         endif()
     endif()
+endif()
+
+if(NOT GRAPHICS_API STREQUAL "Metal")
+    set(SPIRV_CROSS_ENABLE_MSL OFF CACHE BOOL "")
+endif()
+if(NOT GRAPHICS_API STREQUAL "D3D11" AND NOT GRAPHICS_API STREQUAL "D3D12")
+    set(SPIRV_CROSS_ENABLE_HLSL OFF CACHE BOOL "")
 endif()
 
 # Fetching content
