--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ FetchContent_Declare(bgfx
     GIT_REPOSITORY https://github.com/BabylonJS/bgfx.cmake.git
     GIT_TAG 3274a0b5755756d32cef18ed1859a342c1b90abd)
 
-set(CONTENT_TO_FETCH cmake-extensions arcana JsRuntimeHost base-n glslang SPIRV-Cross)
+set(CONTENT_TO_FETCH cmake-extensions arcana JsRuntimeHost base-n)
 
 if(IOS)
     FetchContent_MakeAvailable(ios-cmake)
@@ -80,34 +80,6 @@ option(BABYLON_NATIVE_PLUGIN_TESTUTILS "Include Babylon Native Plugin TestUtils.
 ## Polyfills
 option(BABYLON_NATIVE_POLYFILL_WINDOW "Include Babylon Native Polyfill Window." ON)
 option(BABYLON_NATIVE_POLYFILL_CANVAS "Include Babylon Native Polyfill Canvas." ON)
-
-## SPIRV-Cross
-set(SPIRV_CROSS_CLI OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_TESTS OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_CPP OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_REFLECT OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_C_API OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_UTIL OFF CACHE BOOL "")
-set(SPIRV_CROSS_SKIP_INSTALL ON CACHE BOOL "")
-
-## GLSlang
-set(BUILD_EXTERNAL OFF CACHE BOOL "")
-set(ENABLE_SPVREMAPPER OFF CACHE BOOL "")
-set(ENABLE_GLSLANG_BINARIES OFF CACHE BOOL "")
-set(ENABLE_HLSL OFF CACHE BOOL "")
-set(ENABLE_OPT OFF CACHE BOOL "")
-set(ENABLE_CTEST OFF CACHE BOOL "")
-set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
-set(ENABLE_GLSLANG_WEBMIN ON CACHE BOOL "")
-set(ENABLE_GLSLANG_WEBMIN_DEVEL OFF CACHE BOOL "")
-
-## bgfx
-set(BGFX_BUILD_TOOLS OFF CACHE BOOL "")
-set(BGFX_BUILD_EXAMPLES OFF CACHE BOOL "")
-set(BGFX_INSTALL OFF CACHE BOOL "")
-set(BGFX_CUSTOM_TARGETS OFF CACHE BOOL "")
-set(BGFX_USE_DEBUG_SUFFIX OFF CACHE BOOL "")
-set(BGFX_OPENGL_USE_EGL ON CACHE BOOL "")
 
 # --------------------------------------------------
 
@@ -153,7 +125,35 @@ if(NOT ANDROID AND NOT IOS)
 endif()
 
 if(BABYLON_NATIVE_PLUGIN_NATIVEENGINE)
-    set(CONTENT_TO_FETCH ${CONTENT_TO_FETCH} bgfx)
+    ## SPIRV-Cross
+    set(SPIRV_CROSS_CLI OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_TESTS OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_CPP OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_REFLECT OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_C_API OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_UTIL OFF CACHE BOOL "")
+    set(SPIRV_CROSS_SKIP_INSTALL ON CACHE BOOL "")
+
+    ## GLSlang
+    set(BUILD_EXTERNAL OFF CACHE BOOL "")
+    set(ENABLE_SPVREMAPPER OFF CACHE BOOL "")
+    set(ENABLE_GLSLANG_BINARIES OFF CACHE BOOL "")
+    set(ENABLE_HLSL OFF CACHE BOOL "")
+    set(ENABLE_OPT OFF CACHE BOOL "")
+    set(ENABLE_CTEST OFF CACHE BOOL "")
+    set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
+    set(ENABLE_GLSLANG_WEBMIN ON CACHE BOOL "")
+    set(ENABLE_GLSLANG_WEBMIN_DEVEL OFF CACHE BOOL "")
+
+    ## bgfx
+    set(BGFX_BUILD_TOOLS OFF CACHE BOOL "")
+    set(BGFX_BUILD_EXAMPLES OFF CACHE BOOL "")
+    set(BGFX_INSTALL OFF CACHE BOOL "")
+    set(BGFX_CUSTOM_TARGETS OFF CACHE BOOL "")
+    set(BGFX_USE_DEBUG_SUFFIX OFF CACHE BOOL "")
+    set(BGFX_OPENGL_USE_EGL ON CACHE BOOL "")
+
+    set(CONTENT_TO_FETCH ${CONTENT_TO_FETCH} bgfx glslang SPIRV-Cross)
 endif()
 
 # Setting Graphics API
