--- a/.github/jobs/win32.yml
+++ b/.github/jobs/win32.yml
@@ -18,7 +18,7 @@ parameters:
   
 jobs:
   - job: ${{ parameters.name }}
-    timeoutInMinutes: 30
+    timeoutInMinutes: 15
     pool:
       vmImage: ${{ parameters.vmImage }}
     variables:
@@ -59,18 +59,12 @@ jobs:
           reg add "HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\Windows Error Reporting\LocalDumps\UnitTests.exe" /v DumpFolder /t REG_SZ /d "$(Build.ArtifactStagingDirectory)/Dumps"
 
         displayName: 'Enable Crash Dumps'
-      - task: PublishBuildArtifacts@1
-        inputs:
-          artifactName: '${{ variables.solutionName }} - ${{ parameters.graphics_api }} build folder'
-          pathtoPublish: 'build${{ variables.solutionName }}'
-        displayName: 'Publish ${{ variables.solutionName }} binaries'
-        condition: always()
 
-#      - script: |
-#          cd build${{ variables.solutionName }}\Apps\Playground
-#          cd RelWithDebInfo
-#          Playground app:///Scripts/validation_native.js
-#        displayName: 'Validation Tests'
+      - script: |
+          cd build${{ variables.solutionName }}\Apps\Playground
+          cd RelWithDebInfo
+          Playground app:///Scripts/validation_native.js
+        displayName: 'Validation Tests'
 
       - script: |
           cmake --build build${{ variables.solutionName }} --target INSTALL --config RelWithDebInfo
