--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,38 +120,38 @@ endif()
 
 if(WIN32 AND NOT ANDROID AND NOT IOS)
     # Avoid picking up system installed jsoncpp in favor of source distributed with openxr_loader project
-    set(BUILD_WITH_SYSTEM_JSONCPP OFF CACHE BOOL "disable using system installed jsoncpp")
+    set(BUILD_WITH_SYSTEM_JSONCPP OFF BOOL "disable using system installed jsoncpp")
     set(CONTENT_TO_FETCH ${CONTENT_TO_FETCH} OpenXR-SDK OpenXR-MixedReality)
 endif()
 
 if(BABYLON_NATIVE_PLUGIN_NATIVEENGINE)
     ## SPIRV-Cross
-    set(SPIRV_CROSS_CLI OFF CACHE BOOL "")
-    set(SPIRV_CROSS_ENABLE_TESTS OFF CACHE BOOL "")
-    set(SPIRV_CROSS_ENABLE_CPP OFF CACHE BOOL "")
-    set(SPIRV_CROSS_ENABLE_REFLECT OFF CACHE BOOL "")
-    set(SPIRV_CROSS_ENABLE_C_API OFF CACHE BOOL "")
-    set(SPIRV_CROSS_ENABLE_UTIL OFF CACHE BOOL "")
-    set(SPIRV_CROSS_SKIP_INSTALL ON CACHE BOOL "")
+    set(SPIRV_CROSS_CLI OFF BOOL "")
+    set(SPIRV_CROSS_ENABLE_TESTS OFF BOOL "")
+    set(SPIRV_CROSS_ENABLE_CPP OFF BOOL "")
+    set(SPIRV_CROSS_ENABLE_REFLECT OFF BOOL "")
+    set(SPIRV_CROSS_ENABLE_C_API OFF BOOL "")
+    set(SPIRV_CROSS_ENABLE_UTIL OFF BOOL "")
+    set(SPIRV_CROSS_SKIP_INSTALL ON BOOL "")
 
     ## GLSlang
-    set(BUILD_EXTERNAL OFF CACHE BOOL "")
-    set(ENABLE_SPVREMAPPER OFF CACHE BOOL "")
-    set(ENABLE_GLSLANG_BINARIES OFF CACHE BOOL "")
-    set(ENABLE_HLSL OFF CACHE BOOL "")
-    set(ENABLE_OPT OFF CACHE BOOL "")
-    set(ENABLE_CTEST OFF CACHE BOOL "")
-    set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
-    set(ENABLE_GLSLANG_WEBMIN ON CACHE BOOL "")
-    set(ENABLE_GLSLANG_WEBMIN_DEVEL OFF CACHE BOOL "")
+    set(BUILD_EXTERNAL OFF BOOL "")
+    set(ENABLE_SPVREMAPPER OFF BOOL "")
+    set(ENABLE_GLSLANG_BINARIES OFF BOOL "")
+    set(ENABLE_HLSL OFF BOOL "")
+    set(ENABLE_OPT OFF BOOL "")
+    set(ENABLE_CTEST OFF BOOL "")
+    set(SKIP_GLSLANG_INSTALL ON BOOL "")
+    set(ENABLE_GLSLANG_WEBMIN ON BOOL "")
+    set(ENABLE_GLSLANG_WEBMIN_DEVEL OFF BOOL "")
 
     ## bgfx
-    set(BGFX_BUILD_TOOLS OFF CACHE BOOL "")
-    set(BGFX_BUILD_EXAMPLES OFF CACHE BOOL "")
-    set(BGFX_INSTALL OFF CACHE BOOL "")
-    set(BGFX_CUSTOM_TARGETS OFF CACHE BOOL "")
-    set(BGFX_USE_DEBUG_SUFFIX OFF CACHE BOOL "")
-    set(BGFX_OPENGL_USE_EGL ON CACHE BOOL "")
+    set(BGFX_BUILD_TOOLS OFF BOOL "")
+    set(BGFX_BUILD_EXAMPLES OFF BOOL "")
+    set(BGFX_INSTALL OFF BOOL "")
+    set(BGFX_CUSTOM_TARGETS OFF BOOL "")
+    set(BGFX_USE_DEBUG_SUFFIX OFF BOOL "")
+    set(BGFX_OPENGL_USE_EGL ON BOOL "")
 
     set(CONTENT_TO_FETCH ${CONTENT_TO_FETCH} bgfx glslang SPIRV-Cross)
 endif()
@@ -178,10 +178,10 @@ elseif(WIN32)
 endif()
 
 if(NOT GRAPHICS_API STREQUAL "Metal")
-    set(SPIRV_CROSS_ENABLE_MSL OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_MSL OFF BOOL "")
 endif()
 if(NOT GRAPHICS_API STREQUAL "D3D11" AND NOT GRAPHICS_API STREQUAL "D3D12")
-    set(SPIRV_CROSS_ENABLE_HLSL OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_HLSL OFF BOOL "")
 endif()
 
 # Fetching content
