--- a/.github/workflows/Prebuild.yml
+++ b/.github/workflows/Prebuild.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        platform: [x86, x64, ARM64]
+        platform: [win32, x64, ARM64]
         config: [Debug, Release, RelWithDebInfo]
     steps:
       - name: Checkout
@@ -38,7 +38,7 @@ jobs:
       - name: Download Debug x86 
         uses: actions/download-artifact@v2
         with:
-          name: 'Assembled-Debugx86'
+          name: 'Assembled-Debugwin32'
           path: Package/Windows/Debug/x86
       - name: Download Debug x64 
         uses: actions/download-artifact@v2
@@ -53,7 +53,7 @@ jobs:
       - name: Download Release x86 
         uses: actions/download-artifact@v2
         with:
-          name: 'Assembled-Releasex86'
+          name: 'Assembled-Releasewin32'
           path: Package/Windows/Release/x86
       - name: Download Release x64 
         uses: actions/download-artifact@v2
@@ -68,7 +68,7 @@ jobs:
       - name: Download RelWithDebInfo x86 
         uses: actions/download-artifact@v2
         with:
-          name: 'Assembled-RelWithDebInfox86'
+          name: 'Assembled-RelWithDebInfowin32'
           path: Package/Windows/RelWithDebInfo/x86
       - name: Download RelWithDebInfo x64 
         uses: actions/download-artifact@v2
@@ -79,7 +79,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: 'Assembled-RelWithDebInfoARM64'
-          path: Package/Windows/RelWithDebInfo/ARM64
+          path: Package/Windows/RelWithDebInfo/Arm64
       - name: Upload Install Windows
         uses: actions/upload-artifact@v2
         with:
