unity native engine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,11 +151,6 @@ if(MSVC)
     add_compile_options(/Zc:__cplusplus)
 endif()
 
-if(WIN32)
-    # UrlLib does not support unity build on win32
-    set_property(TARGET UrlLib PROPERTY UNITY_BUILD false)
-endif()
-
 add_subdirectory(Dependencies)
 add_subdirectory(Core)
 add_subdirectory(Plugins)
@@ -173,4 +168,10 @@ endif()
 
 if(BABYLON_NATIVE_INSTALL)
     include(Install/Install.cmake)
+endif()
+
+if(WIN32)
+    # UrlLib does not support unity build on win32
+    set_property(TARGET UrlLib PROPERTY UNITY_BUILD false)
+    set_property(TARGET NativeEngine PROPERTY UNITY_BUILD false)
 endif()
