--- a/.github/workflows/Prebuild.yml
+++ b/.github/workflows/Prebuild.yml
@@ -40,7 +40,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: 'Assembled-Scripts'
-          path: Install/FindBabylonNative.cmake
+          path: |
+            Install/FindBabylonNative.cmake
+            Install/CMakeLists.txt
 
   package:
     needs: [build-windows, build-scripts]
@@ -104,7 +106,7 @@ jobs:
 #          path: Package
 
       - name: Compress Package
-        uses: a7ul/tar-action@v1.1.0
+        uses: a7ul/tar-action@v1.1.3
         id: compress
         with:
           command: c
@@ -129,36 +131,9 @@ jobs:
         env:
           SHA: ${{ steps.short-sha.outputs.sha }}
 
-      - name: Latest Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ReleasePackage.tar.gz
-          tag_name: V${{ env.SHA }}
-          name: Latest
-          body: "Latest Release for ${{ env.SHA }}"
-          draft: false
-          prerelease: true
-        env:
-          SHA: ${{ steps.short-sha.outputs.sha }}
-
-#      - name: Create Release
-#        id: create_release
-#        uses: actions/create-release@v1.1.4
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          tag_name: V${{ github.sha }}
-#          release_name: Release ${{ github.sha }}
-#          body: |
-#            Release ${{ github.sha }}
-#          draft: false
-#          prerelease: false
-#      - name: Upload binaries to release
-#        uses: svenstaro/upload-release-action@v2
-#        with:
-#          repo_token: ${{ secrets.GITHUB_TOKEN }}
-#          file: ReleasePackage.tar.gz
-#          asset_name: ReleasePackage
-#          tag: V${{ github.sha }}
-#          overwrite: true
-#          body: "Release ${{ github.sha }}"
+  test-release:
+    needs: [package]
+    runs-on: windows-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@master
